# general_index_libchewing

./: .gitignore  CMakeLists.txt  Makefile.am  configure.ac
data/: Makefile.am  liu57a.utf8.cin
data/src/: build_tool.c
doc/: libchewing.texi
include/: chewingio.h  global.h
include/internal/: char-private.h  chewing-private.h  chewingutil.h  dict-private.h  global-private.h  hash-private.h  key2pho-private.h  memory-private.h  tree-private.h  userphrase-private.h
src/: Makefile.am  char.c  chewingio.c  chewingutil.c  choice.c  dict.c  hash.c  private.h  tree.c  userphrase.c  zuin.c
src/common/: key2pho.c
src/tools/: Makefile.am  build-tool.c  build-tool.h  build_tool.c  build_tool.h  dump_database.c  gen_IM_data.c  init_database.c
test/: default_nonphone_test.cin  default_nonphone_test.txt  simulate.c  stress.c  test-bopomofo.c  test-config.c  test-non-bopomofo-IM.c  testchewing.c  testhelper.c
